frame/support/test/tests/pallet_ui/inherent_001.stderr
error: Invalid pallet::inherent, expect impl<..> ProvideInherent for Pallet<..>
  --> $DIR/inherent_001.rs:19:2
   |
19 |     impl Foo {}
   |     ^^^^
